--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,1 +1,1 @@
-@import "./partials/colors.scss","./partials/header","./partials/footer","./partials/_navbar","./partials/main","./partials/cotiza";
+@import "./partials/mixins","./partials/maps.scss","./partials/header","./partials/extends","./partials/footer","./partials/_navbar","./partials/main","./partials/cotiza","./partials/form","./partials/acercaDe","./partials/calsesDeIngles","./partials/servicioDeTraduccion","./partials/body","./partials/mediasQueries";
