--- a/styles/partials/_cotiza.scss
+++ b/styles/partials/_cotiza.scss
@@ -5,8 +5,8 @@
     font-size: small;
     color: rgb(255, 255, 255);
     text-decoration: none;
-    background-color: rgb(8, 216, 36);
+    background-color: map-get($color,colorwhatsapp );
     &:hover{
-        background-color: rgb(19, 102, 44);
+        background-color: map-get($color,colorwhatsapph);
     }
 }
