--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -1,6 +1,11 @@
 footer{
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 40px;
+    background-color:map-get($color, colorpagee);
+    h6{
     color: rgb(255, 255, 255);
-    background-color: $colorpage;
+    
+    }
 }
