--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -1,10 +1,4 @@
 main{
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    height:100vh;
-    background-image: url(../img/estatua_libertad.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    @extend %flexRowCenter;
+    @extend %imageCenter;
 }
