--- a/styles/partials/_body.scss
+++ b/styles/partials/_body.scss
@@ -1,3 +1,19 @@
 body{
     font-family: map-get($fonts, primariFont)
 }
+#contenedor{
+    display: flex;
+    justify-content: center;
+    #titulojm{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-self: center;
+        margin-top:20px;
+        font-weight: bold;
+    }
+}
+.titulo{
+    font-size: 15px;
+    font-weight: bold;
+}
