--- a/styles/partials/_calsesDeIngles.scss
+++ b/styles/partials/_calsesDeIngles.scss
@@ -18,7 +18,7 @@
             background-color: map-get($color,colorpagee);
             color: white;
             .titulo{ 
-                color: black;
+                color: rgb(255, 0, 0);
                 display: flex;
                 align-items: center;
                 align-self: center;
