--- a/styles/partials/_mediasQueries.scss
+++ b/styles/partials/_mediasQueries.scss
@@ -1,3 +1,8 @@
+@media (min-width: 1000px) { 
+    .navbar-brand{
+        display: none;
+    }
+}
 @media screen and (min-width:320px) and (orientation:landscape) {
     #cartas{
         font-size: small;
