--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,6 +33,10 @@ footer h6 {
   color: rgb(255, 255, 255);
 }
 
+#botonMenu {
+  border: 1px solid white;
+}
+
 #barra {
   display: flex;
   justify-content: center;
@@ -62,11 +66,6 @@ span {
   text-align: center;
 }
 
-@media (min-width: 1000px) {
-  .navbar-brand {
-    display: none;
-  }
-}
 #bottom a {
   display: flex;
   border-radius: 20px;
@@ -110,11 +109,11 @@ span {
 }
 #cartas #bloqCard .card {
   background-color: #1C1B35;
-  color: white;
+  color: rgb(255, 255, 255);
   border: solid 5px rgb(255, 255, 255);
 }
 #cartas #bloqCard .card #mifoto {
-  border: solid 3px white;
+  border: solid 3px rgb(255, 255, 255);
   border-radius: 60px;
 }
 
@@ -141,7 +140,7 @@ span {
   color: white;
 }
 #cartas .card #card-body .titulo {
-  color: black;
+  color: rgb(255, 0, 0);
   display: flex;
   align-items: center;
   align-self: center;
@@ -167,19 +166,40 @@ span {
   margin: 5px;
   border-radius: 6px;
   background-color: #1C1B35;
-  color: white;
+  color: rgb(255, 255, 255);
 }
-#cartas .card #card-body .titulo {
-  color: black;
-  display: flex;
-  align-items: center;
-  align-self: center;
+#cartas .card #card-body .spn {
+  background-color: #1C1B35;
+  color: #1C1B35;
 }
 
 body {
   font-family: "Roboto";
 }
 
+#contenedor {
+  display: flex;
+  justify-content: center;
+}
+#contenedor #titulojm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  margin-top: 20px;
+  font-weight: bold;
+}
+
+.titulo {
+  font-size: 15px;
+  font-weight: bold;
+}
+
+@media (min-width: 1000px) {
+  .navbar-brand {
+    display: none;
+  }
+}
 @media screen and (min-width: 320px) and (orientation: landscape) {
   #cartas {
     font-size: small;
