--- a/styles/partials/_form.scss
+++ b/styles/partials/_form.scss
@@ -1,6 +1,6 @@
 #formulario{
     display: flex;
-    justify-content: center;
+    margin-left: 1px;
     height: 100vh;
     align-items: center;
     color: rgb(255, 255, 255);
@@ -8,6 +8,6 @@
         background-color:map-get($color,colorpagee);
         text-decoration:underline;
         border: 2px solid ;
-        padding: 10px;
+        padding: 7px;
     }
 }
