--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,7 +81,7 @@ span {
 
 #formulario {
   display: flex;
-  justify-content: center;
+  margin-left: 1px;
   height: 100vh;
   align-items: center;
   color: rgb(255, 255, 255);
@@ -90,7 +90,7 @@ span {
   background-color: #1C1B35;
   text-decoration: underline;
   border: 2px solid;
-  padding: 10px;
+  padding: 7px;
 }
 
 #cartas {
