subida de archivo modificado

--- a/styles/partials/_servicioDeTraduccion.scss
+++ b/styles/partials/_servicioDeTraduccion.scss
@@ -9,7 +9,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width:19rem;
+        width:auto;
         border: solid 2px black;
         border-radius: 10px;
         #card-body{
