--- a/styles/partials/_calsesDeIngles.scss
+++ b/styles/partials/_calsesDeIngles.scss
@@ -9,7 +9,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width:19rem;
+        width:auto;
+        height: auto;
         border: solid 2px black;
         border-radius: 10px;
         #card-body{
@@ -18,7 +19,7 @@
             background-color: map-get($color,colorpagee);
             color: white;
             .titulo{ 
-                color: rgb(255, 0, 0);
+                color: rgb(0, 0, 0);
                 display: flex;
                 align-items: center;
                 align-self: center;
