--- a/styles/styles.css
+++ b/styles/styles.css
@@ -129,7 +129,8 @@ span {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 19rem;
+  width: auto;
+  height: auto;
   border: solid 2px black;
   border-radius: 10px;
 }
@@ -140,7 +141,7 @@ span {
   color: white;
 }
 #cartas .card #card-body .titulo {
-  color: rgb(255, 0, 0);
+  color: rgb(0, 0, 0);
   display: flex;
   align-items: center;
   align-self: center;
@@ -158,7 +159,7 @@ span {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 19rem;
+  width: auto;
   border: solid 2px black;
   border-radius: 10px;
 }
