--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,7 +26,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 40px;
+  height: auto;
   background-color: #1C1B35;
 }
 footer h6 {
