subida de archivo modificado

--- a/styles/partials/_calsesDeIngles.scss
+++ b/styles/partials/_calsesDeIngles.scss
@@ -9,7 +9,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width:auto;
+        width:19rem;
         height: auto;
         border: solid 2px black;
         border-radius: 10px;
