--- a/styles/partials/_mediasQueries.scss
+++ b/styles/partials/_mediasQueries.scss
@@ -40,3 +40,24 @@
         width:25rem;
     }
 }    
+@media screen and (min-width:300px) and (orientation:landscape) {
+    #formulario{
+        display: flex;
+        margin-left: 1px;
+        height: 100vh;
+        align-items: center;
+        color: rgb(255, 255, 255);
+        .fonfoform{
+            display: flex;
+            flex-direction: column;
+            height: auto;
+            background-color:map-get($color,colorpagee);
+            text-decoration:underline;
+            border: 2px solid ;
+            padding: 2px;
+            label{
+                font-size: small;
+            }
+        }
+    }
+}   
