--- a/styles/styles.css
+++ b/styles/styles.css
@@ -129,7 +129,7 @@ span {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: auto;
+  width: 19rem;
   height: auto;
   border: solid 2px black;
   border-radius: 10px;
@@ -236,5 +236,26 @@ body {
 @media screen and (min-width: 320px) and (orientation: landscape) {
   .card {
     width: 25rem;
+  }
+}
+@media screen and (min-width: 300px) and (orientation: landscape) {
+  #formulario {
+    display: flex;
+    margin-left: 1px;
+    height: 100vh;
+    align-items: center;
+    color: rgb(255, 255, 255);
+  }
+  #formulario .fonfoform {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    background-color: #1C1B35;
+    text-decoration: underline;
+    border: 2px solid;
+    padding: 2px;
+  }
+  #formulario .fonfoform label {
+    font-size: small;
   }
 }/*# sourceMappingURL=styles.css.map */
