--- a/styles/partials/_mediasQueries.scss
+++ b/styles/partials/_mediasQueries.scss
@@ -17,6 +17,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            font-size: small;
             width:30rem;
             border: solid 2px black;
             border-radius: 10px;
@@ -54,7 +55,7 @@
             background-color:map-get($color,colorpagee);
             text-decoration:underline;
             border: 2px solid ;
-            padding: 2px;
+            padding: 5px;
             label{
                 font-size: small;
             }
