--- a/styles/partials/_calsesDeIngles.scss
+++ b/styles/partials/_calsesDeIngles.scss
@@ -1,30 +1,3 @@
-#cartas{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100vh;
-    height: 100VH;
-    .card{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width:19rem;
-        height: auto;
-        border: solid 2px black;
-        border-radius: 10px;
-        #card-body{
-            margin:5px;
-            border-radius: 6px;
-            background-color: map-get($color,colorpagee);
-            color: white;
-            .titulo{ 
-                color: rgb(0, 0, 0);
-                display: flex;
-                align-items: center;
-                align-self: center;
-            }
-        }
-    }        
-}         
-
+.textt{
+    font-size: small;
+}
