--- a/styles/styles.css
+++ b/styles/styles.css
@@ -117,34 +117,8 @@ span {
   border-radius: 60px;
 }
 
-#cartas {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100vh;
-  height: 100VH;
-}
-#cartas .card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 19rem;
-  height: auto;
-  border: solid 2px black;
-  border-radius: 10px;
-}
-#cartas .card #card-body {
-  margin: 5px;
-  border-radius: 6px;
-  background-color: #1C1B35;
-  color: white;
-}
-#cartas .card #card-body .titulo {
-  color: rgb(0, 0, 0);
-  display: flex;
-  align-items: center;
-  align-self: center;
+.textt {
+  font-size: small;
 }
 
 #cartas {
