subida de archivo modificado

--- a/styles/partials/_cotiza.scss
+++ b/styles/partials/_cotiza.scss
@@ -1,8 +1,8 @@
-#bottom a{
+#boton a{
     display: flex;
     border-radius:20px;
     padding: 15px;
-    font-size: small;
+    font-size: 18px;
     color: rgb(255, 255, 255);
     text-decoration: none;
     background-color: map-get($color,colorwhatsapp );
