--- a/styles/partials/_form.scss
+++ b/styles/partials/_form.scss
@@ -1,6 +1,8 @@
-#formulario{
+#formC{
     display: flex;
-    margin-left: 1px;
+    justify-content: center;
+}
+#formulario{
     height: 100vh;
     align-items: center;
     color: rgb(255, 255, 255);
